{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 73,
  "lineage": "7b9d02a7-e73a-f638-b74e-87e093c8dda6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:635411703757:loadbalancer/app/desafio-lb/f5b1dffb5b420bef",
            "arn_suffix": "app/desafio-lb/f5b1dffb5b420bef",
            "dns_name": "desafio-lb-473264883.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:635411703757:loadbalancer/app/desafio-lb/f5b1dffb5b420bef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "desafio-lb",
            "security_groups": [
              "sg-0651551e39d616342"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cf1ea41"
              },
              {
                "subnet_id": "subnet-d56d3cf4"
              }
            ],
            "subnets": [
              "subnet-0cf1ea41",
              "subnet-d56d3cf4"
            ],
            "tags": {
              "Name": "desafio-lb"
            },
            "tags_all": {
              "Name": "desafio-lb"
            },
            "vpc_id": "vpc-2e0b6c53",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:635411703757:listener/app/desafio-lb/f5b1dffb5b420bef/b094bdfd58c83ce2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:635411703757:targetgroup/app-target-group/cf7249dc6b838242",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:635411703757:listener/app/desafio-lb/f5b1dffb5b420bef/b094bdfd58c83ce2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:635411703757:loadbalancer/app/desafio-lb/f5b1dffb5b420bef",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.app",
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:635411703757:targetgroup/app-target-group/cf7249dc6b838242",
            "arn_suffix": "targetgroup/app-target-group/cf7249dc6b838242",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:635411703757:targetgroup/app-target-group/cf7249dc6b838242",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app-target-group"
            },
            "tags_all": {
              "Name": "app-target-group"
            },
            "target_type": "ip",
            "vpc_id": "vpc-2e0b6c53"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635411703757:security-group/sg-0eab85e1ab693dc50",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eab85e1ab693dc50",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0651551e39d616342"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "app-security-group",
            "name_prefix": "",
            "owner_id": "635411703757",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-security-group"
            },
            "tags_all": {
              "Name": "app-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-2e0b6c53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:635411703757:security-group/sg-0651551e39d616342",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0651551e39d616342",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "635411703757",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "load-balancer-security-group"
            },
            "tags_all": {
              "Name": "load-balancer-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-2e0b6c53"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}